--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ textarea {
   color: #000000;
   border-left: 1px solid black;
   padding: 10px;
+  width: 100%;
 }
 
 .jumbotron {
@@ -34,9 +35,10 @@ textarea {
   white-space: pre-wrap;
   height: 80px;
   border-top: 1px solid white;
+  border: #000000 solid 2px;
 }
 
-.hour {
+.time {
   background-color: #ffffff;
   color: #000000;
   border-top: 1px dashed #000000;
@@ -68,4 +70,9 @@ textarea {
 .saveBtn i:hover {
   font-size: 20px;
   transition: all 0.3s ease-in-out;
+}
+
+.time-border {
+
+  border-right: #000000 solid 2px;
 }
